[fix] active button visibility issue; fixes #604
Former-commit-id: c032ee19ac12ae846408f95d31af2f87e9eb1c76

--- a/opsiweb/uib-components/static/css/custom.css
+++ b/opsiweb/uib-components/static/css/custom.css
@@ -301,7 +301,11 @@ tbody .col-rowactions :not(div).btn {
   display: block;
   width: 100%;
 }
-
+.btn-sm.active {
+  color: var(--fg-btn);
+  background-color: var(--bg-btn) !important;
+  border-color: var(--b-btn) !important;
+}
 .btn-primary {
   color: var(--fg-btn);
   background-color: var(--bg-btn) !important;
